# newsletter

./: .env  Cargo.toml  README.md  configuration.yaml  pgscript.sh
.cargo/: config.toml
.github/workflows/: general.yml
public/: index.html  index.js  index2.js
src/: lib.rs  main.rs  startup.rs
src/config/: enviroment.rs  mod.rs
src/controller/: mod.rs  newsletter_controller.rs
src/model/: newsletter.rs
src/routes/: mod.rs  newsletter_routes.rs
tests/: health_check.rs
