[package]
name = "newsletter"
version = "0.1.0"
authors = ["Tulio Hernandez <tehp1993@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# path = "src/main.rs"
# name = "newsletter"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
dotenv = "0.15.0"
actix-web = "4"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10.0"
rand = "0.8.4"
actix-files = "0.6.2"

[dev-dependencies]
reqwest = "0.11"