[package]
name = "newsletter"
version = "0.1.0"
authors = ["Tulio Hernandez <tehp1993@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# path = "src/main.rs"
# name = "newsletter"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
dotenv = "0.15.0"
actix-web = { version = "4.4.0" }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10.0"
rand = "0.8.4"
actix-files = "0.6.2"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.1", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
config = "0.13.3"
uuid = { version = "1.4.1", features = ["v4"] }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.3"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }

[dev-dependencies]
reqwest = "0.11"
once_cell = "1"
